src/objects/auActivityRelated__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AttachmentsFromEvent__c</fullName>
        <label>活動添付ファイル</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>添付ファイル有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHaveAttachmentFromEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>活動添付ファイル有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>SubCategory</label>
        <picklist>
            <picklistValues>
                <fullName>仕組</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>制度</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>意識</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>風土</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>auActivityRelated</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>